[tool.poetry]
name = "image-scraper"
version = "0.1.0"
description = "Program that scrapes images"
authors = ["Sam Naden <samnaden@gmail.com>"]
packages = [{include = "image_scraper"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^1.9.1"
pandas = "^2.2.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^22.3.0"
bandit = "^1.7.4"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
